fix position of added cubes + add ground for more visibility

--- a/index.css
+++ b/index.css
@@ -31,7 +31,7 @@ body {
 }
 
 .app-header .brand {
-  background: cadetblue;
+  background: rgb(95, 158, 160);
   grid-area: brand;
   display: flex;
   font-family: "Roboto", sans-serif;
